package ar.utn.donatrack.donaciones.model.categoria;

import java.util.List;

public class Categoria {
    // TODO: id, nombre, requiereEstado (nuevo/usado), esPerecible
    private List<Subcategoria> subcategorias;
}
