@startuml diagrama-De-Clases

class Categoria{
  - subcategorias: List<Subcategoria>
}

class Subcategoria{
  - tipo : String
}

abstract class MedioDeContacto{

}

class Email{
    - direccion: String;
}

class Telefono{
    - numero: String;
}

class Whatsapp{
    - numero: String;
}

class Bien{
    - subcategoria: Subcategoria;
    - descripcion: String;
    - foto: String;
    - cantidad(ej: Peso Neto): Int;
    - unidad: String; 
}

class BienConEstado{
    - esNuevo: Boolean;
}

class BienPerecible{
    - fechaVencimiento: LocalDate;
}

class Donacion{
    - idDonante: UUID;
    - estado: EstadoDonacion;
    - bien:  Bien;
    - cantidad: Int;
    - fechaIngreso: LocalDate;
}

enum EstadoDonacion{
    PENDIENTE_ASIGNACION
    ASIGNADA
    EN_ENTREGA
    ENTREGADA
    VENCIDA
}

enum EstadoDonante{
    ACTIVO
    INACTIVO
}

enum Genero{
    MASCULINO
    FEMENINO
    NO_BINARIO
    OTRO
    PREFIERO_NO_DECIR
}

abstract class PersonaDonante{
    - idDonante: UUID;
    - tipoDocumento: String;
    - numeroDocumento: String;
    - direccion: Direccion;
    - estado: EstadoDonante;
}

class PersonaHumana{
    - nombre: String;
    - apellido: String;
    - dni: Int;
    - edad: Int;
    - genero: Genero;
    - contactos: List<MedioDeContacto>;
}

class PersonaJuridica{
    - razonSocial: String;
    - tipo : TipoPersonaJuridica;
    - rubro: String;
    - representantes : List<Representante>; 
}

class Representante{
    - nombre: String;
    - apellido: String;
    - contactos: List<MedioDeContacto>
}

enum TipoPersonaJuridica {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}

class Direccion{
    - calle: String;
    - numero: Int;
    - localidad: Localidad;
    - codigoPostal: String;
}

class Localidad{
- nombre: String;
- provincia: Provincia;
}

class Provincia{
- nombre: String;
}

class EntidadBeneficiaria{
    - razonSocial: String;
    - direccion: Direccion;
    - contactos: List<MedioDeContacto>;
    - representantes: List<Representante>;
    - campanias: List<Campania>;

    + registrarNecesidad(Necesidad necesidad): void;
}

abstract class Necesidad{
    - bien: Bien ;
    - descripcion: String;
    - cantidadObjetivo: Int;
    - cantidadRecibida: Int;
    - fechaRegistro: LocalDate;

    + recibirDonacion(int cantidad): void;
    + estaSatisfecha(): Boolean;
}

class NecesidadExtraordinaria{

}

class NecesidadRecurrente{
    - periodo: Periodicidad;
    - fechaInicioPeriodo;

    + reiniciarPeriodo(): void;
    + requiereReinicio(LocalDate fechaActual): Boolean;
}

enum Periodicidad{
    SEMANAL,
    MENSUAL,
    CUATRIMESTRAL,
    ANUAL
}

class Campania{
    - necesidades: List<Necesidad>;
    - nombre: String;
}

Campania --* Necesidad


Bien <|-- BienConEstado
Bien <|-- BienPerecible


Donacion --* Bien
Donacion -- EstadoDonacion


PersonaDonante <|-- PersonaHumana
PersonaDonante <|-- PersonaJuridica
PersonaHumana --* MedioDeContacto
PersonaDonante --* Direccion
PersonaDonante -- EstadoDonante
PersonaDonante --* Donacion

MedioDeContacto <|-- Email
MedioDeContacto <|-- Telefono
MedioDeContacto <|-- Whatsapp

Representante --* MedioDeContacto

Necesidad <|-- NecesidadExtraordinaria
Necesidad <|-- NecesidadRecurrente
Necesidad --* Bien


NecesidadRecurrente -- Periodicidad

PersonaJuridica -- TipoPersonaJuridica
PersonaJuridica --* Representante

PersonaHumana -- Genero

EntidadBeneficiaria --* Direccion
EntidadBeneficiaria --* Representante
EntidadBeneficiaria --* MedioDeContacto
EntidadBeneficiaria --* Campania

Direccion --* Localidad
Localidad --* Provincia

Categoria --* Subcategoria
Subcategoria *-- Bien

@enduml